<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_make_offer"
            android:icon="@drawable/ic_offer"
            android:title="@string/make_offer" />
        <item
            android:id="@+id/nav_my_properties"
            android:icon="@drawable/ic_property"
            android:title="@string/my_properties"
            android:checked="true" />
        <item
            android:id="@+id/nav_requests"
            android:icon="@drawable/ic_requests"
            android:title="@string/view_requests" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>